feat: add junit test logging

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,8 @@ application {
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
+    testLogging.showStandardStreams = true
+    testLogging {
+        events "passed", "skipped", "failed", "standardOut", "standardError"
+    }
 }
